[gd_scene load_steps=5 format=3 uid="uid://kac6vgxq6nhd"]

[ext_resource type="Texture2D" uid="uid://baj2331p3fve7" path="res://assets/cards/cardTemplate.png" id="1_h5c0q"]
[ext_resource type="Script" path="res://scripts/Card/card.gd" id="1_xdkfr"]
[ext_resource type="Texture2D" uid="uid://drmwshxgfv01g" path="res://assets/cards/TextBackground/textBackground.png" id="3_ywemr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i40ef"]
size = Vector2(92, 128)

[node name="card" type="Node2D"]
script = ExtResource("1_xdkfr")

[node name="cardTemplate" type="Sprite2D" parent="."]
texture = ExtResource("1_h5c0q")

[node name="cardImage" type="Node2D" parent="."]

[node name="image" type="Sprite2D" parent="cardImage"]
position = Vector2(0, -17)

[node name="TextBackground" type="Node2D" parent="."]

[node name="background" type="Sprite2D" parent="TextBackground"]
position = Vector2(-0.25, 40)
scale = Vector2(1.00746, 1)
texture = ExtResource("3_ywemr")

[node name="Label" type="Label" parent="TextBackground/background"]
offset_left = -33.0
offset_top = -12.0
offset_right = 33.0
offset_bottom = 15.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -3
theme_override_font_sizes/font_size = 7
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ResourceGem" type="Node2D" parent="."]

[node name="Resource" type="Sprite2D" parent="ResourceGem"]
position = Vector2(0, 17)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("RectangleShape2D_i40ef")
